--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Run my own container action
         id: hello-action
-        uses: jasontiedt/release-demo/hello-world-docker-action@v1
+        uses: jasontiedt/release-demo@v1.1
         with:
           who-to-greet: '@wulfland'
 
