--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   Build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - run: |
           echo "🎉 The job was triggered by event: ${{ github.event_name }}"
